--- a/client/src/career/CareerAnalysis.css
+++ b/client/src/career/CareerAnalysis.css
@@ -20,8 +20,12 @@ Col {
 
 .col {
     border: 1px solid black;
+    max-height: 85vh;
+    overflow: scroll;
 }
 
 button {
     width: 100%;
+    height: 200px;
+    position: relative;
 }
