--- a/client/src/career/CareerAnalysis.css
+++ b/client/src/career/CareerAnalysis.css
@@ -34,3 +34,15 @@ button {
     width: 200px;
     height: 50px;
 }
+
+.dropdown {
+    width: 200px;
+    height: 50px;
+    display: inline-block;
+}
+
+.area-drop-btn {
+    width: 200px;
+    height: 50px;
+
+}
