Added functionality for the different area codes. Also cleaned up the CPI data display.

--- a/client/src/career/CareerAnalysis.css
+++ b/client/src/career/CareerAnalysis.css
@@ -46,3 +46,13 @@ button {
     height: 50px;
 
 }
+
+.area-drop-item {
+    height: 50px;
+}
+
+.area-drop-menu {
+    height: 75vh;
+    overflow: auto;
+    overflow-x: hidden;
+}
