--- a/client/src/magnifying/Magnified.css
+++ b/client/src/magnifying/Magnified.css
@@ -31,8 +31,9 @@
 .magnified-area {
     position: absolute;
     width: 100vw;
-    height: 50vw;
+    height: 100vh;
     transform: scale(2);
-    left: 550px;
-    top: 250px;
+    left: calc(50vw + 100px);
+    top: 500px;
 }
+
