--- a/client/src/question-presets/presets.css
+++ b/client/src/question-presets/presets.css
@@ -10,4 +10,15 @@
   width: 25em;
 }
 
-/* flex-basis: 0; */
+@keyframes fadeIt {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.DynamicQuestion.animate {
+  animation: fadeIt 0.5s ease-in-out;
+}
