--- a/client/src/career/CareerAnalysis.css
+++ b/client/src/career/CareerAnalysis.css
@@ -1,58 +1,64 @@
 Container {
-    border: 1px solid black;
+  border: 1px solid black;
 }
 
 .container {
-    border: 1px solid black;
+  border: 1px solid black;
 }
 
 Row {
-    border: 1px solid black;
+  border: 1px solid black;
 }
 
 .row {
-    border: 1px solid black;
+  border: 1px solid black;
 }
 
 Col {
-    border: 1px solid black;
+  border: 1px solid black;
 }
 
 .col {
-    border: 1px solid black;
-    max-height: 85vh;
-    overflow: scroll;
+  border: 1px solid black;
+  max-height: 85vh;
+  overflow: scroll;
 }
 
 button {
-    width: 100%;
-    height: 200px;
-    position: relative;
+  width: 100%;
+  height: 200px;
+  position: relative;
 }
 
 .ret-btn {
-    width: 200px;
-    height: 50px;
+  width: 200px;
+  height: 50px;
 }
 
 .dropdown {
-    width: 200px;
-    height: 50px;
-    display: inline-block;
+  width: 200px;
+  height: 50px;
+  display: inline-block;
 }
 
 .area-drop-btn {
-    width: 200px;
-    height: 50px;
-
+  width: 200px;
+  height: 50px;
 }
 
 .area-drop-item {
-    height: 50px;
+  height: 50px;
 }
 
 .area-drop-menu {
-    height: 75vh;
-    overflow: auto;
-    overflow-x: hidden;
+  height: 75vh;
+  overflow: auto;
+  overflow-x: hidden;
+}
+
+.JobListHeader {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: baseline;
 }
