--- a/client/src/question-presets/presets.css
+++ b/client/src/question-presets/presets.css
@@ -7,9 +7,13 @@
 }
 
 .Question {
-  width: 25em;
-  margin: 0.3em;
-  padding: 0.1em;
+  margin: 0.2em; 
+  padding: 0.2em;
+}
+
+.static-question {
+  height: 5em;
+  width: 15em;
 }
 
 @keyframes fadeIt {
@@ -23,4 +27,9 @@
 
 .DynamicQuestion.animate {
   animation: fadeIt 0.5s ease-in-out;
+}
+
+.DynamicQuestion {
+  height: 5em;
+  width: 15em;
 }
